@@ -15,7 +15,6 @@ public class PostResponse {
     private String title;
     private String content;
     private List<String> attachmentUrls;
-    private String createdAt;
 
     public static PostResponse from(Post post) {
         PostResponse response = new PostResponse();
@@ -24,11 +23,7 @@ public class PostResponse {
         response.content = post.getContent();
         response.attachmentUrls = post.getAttachments().stream()
                 .map(Attachment::getFileUrl)
-                .toList();
-        response.createdAt = post.getCreatedAt() != null ? post.getCreatedAt().toString() : null;
+                .collect(Collectors.toList());
         return response;
     }
 }
-
-
-
